Fix - doctors section spacing and responsiveness

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1291,12 +1291,11 @@ section {
 .doctors .member {
     position: relative;
     box-shadow: 0px 2px 15px rgba(44, 73, 100, 0.08);
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 30px 10px;
     border-radius: 10px;
-    margin-top: 20px;
+    height: 100%;
+    min-height: 100%;
+    flex-wrap: wrap;
 }
 
 .doctors .member .member-info p a {
@@ -1320,6 +1319,14 @@ section {
 .doctors .member .member-info {
     padding-left: 25px;
     padding-right: 25px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.doctors .member .member-info:first-of-type {
+    border-right: 2px solid #efefef;
 }
 
 .doctors .member h4 {
@@ -1349,7 +1356,7 @@ section {
 }
 
 .doctors .member p {
-    margin: 10px 0 0 0;
+    margin: auto 0 0 0;
     font-size: 14px;
 }
 
@@ -1424,6 +1431,22 @@ section {
 
 .doctors .member .social2 a+a {
     margin-left: 8px;
+}
+
+@media (max-width:576px) {
+    .doctors .member {
+        height: unset;
+    }
+    .doctors .member .member-info {
+        width: 100%;
+    }
+
+    .doctors .member .member-info:first-of-type {
+        margin-bottom: 24px;
+        padding-bottom: 24px;
+        border-bottom: 2px solid #efefef;
+        border-right: none;
+    }
 }
 
 @media (max-width:992px) {
